--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -75,7 +75,7 @@
 </div>
 <span class="main-content-shadow"></span>
 
-<style onload="this.media='all'">
+<style>
   span {
     margin: 0;
     padding: 0;
@@ -481,8 +481,8 @@
       padding: 15px 0;
     }
   } /*! CSS Used fontfaces */
-  /* @font-face {
-		font-family: gregasaurus;
+   @font-face {
+		font-family: "gregasaurus";
 		src: url(/fonts/gregasaurus.eot);
 		src:
 			url(/fonts/gregasaurus.eot#iefix) format('embedded-opentype'),
@@ -492,7 +492,7 @@
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
-	} */
+	} 
 
   .gregasaurus {
     font-family: gregasaurus !important;
@@ -520,7 +520,7 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    textstyleow: 1px 1px 5px #fff;
+    text-shadow: 1px 1px 5px #fff;
   }
   * {
     position: relative;
