--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -184,10 +184,9 @@
     visibility: hidden;
   }
   [class^="icon-"]:before {
-    font-family: gregasaurus;
+    font-family: "gregasaurus";
     font-style: normal;
     speak: none;
-    font-display: swap;
   }
   .icon-pipe:before {
     content: "\0025";
@@ -495,7 +494,7 @@
 	} 
 
   .gregasaurus {
-    font-family: gregasaurus !important;
+    font-family: "gregasaurus" !important;
   }
   /* @font-face {
 		font-family: MuncieRegular;
