--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -1,5 +1,5 @@
 ---
-
+import "../components/styles/gregasaurus.css";
 ---
 
 <div id="header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
@@ -75,7 +75,7 @@
 </div>
 <span class="main-content-shadow"></span>
 
-<style>
+<style is:global>
   span {
     margin: 0;
     padding: 0;
