--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -69,7 +69,7 @@ const structuredData = {
       <EditBlog />
 
       <Footer />
-      <style onload="this.media='all'">
+      <style is:global>
         #body,
         html,
         body {
