--- a/src/components/BuyCoffee.astro
+++ b/src/components/BuyCoffee.astro
@@ -7,8 +7,8 @@
     alt="Buy Me A Coffee"
     style="height: 30px !important;width: 108px !important;"
   /></a
->ddf
-<scripcctss
+>
+<script
   type="text/javascript"
   src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
   data-name="bmc-button"
@@ -19,4 +19,4 @@
   data-text="Buy me a coffee"
   data-outline-color="#ffffff"
   data-font-color="#ffffff"
-  data-coffee-color="#FFDD00"></scripcctss>
+  data-coffee-color="#FFDD00"></script>
