--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -169,6 +169,22 @@ const atomFeed = "/atom.xml";
 <!-- start webpushr code --> <script is:inline defer>
   (function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BFlSYhLvXiTFakbg0ixlBKs6b7gDwuqwjnNY5kwvOWTLW3FGBPecsEziwpA5GC5XmZwTh2d7_k_qg-IQFsS05FE' });</script><!-- end webpushr code -->
 
+  <script is:inline defer>
+    importScripts('https://cdn.webpushr.com/sw-server.min.js');
+    self.addEventListener('push', (event) => {
+  const payload = event.data.text(); // Get the push message data
+  // ... Display a notification using the Notification API
+  event.waitUntil(
+    self.registration.showNotification('Web Push', {
+      body: payload,
+      icon: 'icon.png', // Optional:  icon for the notification
+    })
+  );
+});
+
+
+    </script>
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content={articleDate ? "article" : "website"} />
 <meta property="og:url" content={Astro.url} />
