--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -75,6 +75,8 @@ import "../components/styles/gregasaurus.css";
 </div>
 <span class="main-content-shadow"></span>
 
+<div id="webpushr-subscription-button"></div>
+
 <style is:global>
   span {
     margin: 0;
